--- a/graphics/libGL/Makefile.common
+++ b/graphics/libGL/Makefile.common
@@ -18,7 +18,7 @@
 MESAVERSION=	${MESABASEVERSION}${MESASUBVERSION:C/^(.)/.\1/}
 MESADISTVERSION=${MESABASEVERSION}${MESASUBVERSION:C/^(.)/-\1/}
 
-MESABASEVERSION=	10.6.6
+MESABASEVERSION=	11.0.0
 # if there is a subversion, don't include the '-' between 7.11-rc2.
 MESASUBVERSION=
 
@@ -67,7 +67,7 @@ INSTALL_TARGET=		install-strip
 
 COMPONENT=		${PORTNAME:tl:C/^lib//:C/mesa-//}
 
-MESA_LLVM_VER=36
+MESA_LLVM_VER=37
 
 # DRI3 needs PRIME support in the kernel to work
 CONFIGURE_ARGS+=	--disable-dri3
@@ -78,6 +78,9 @@ CONFIGURE_ARGS+=	--enable-gbm
 # the third option in --with-egl-platforms is wayland.
 CONFIGURE_ARGS+=	--enable-egl --with-egl-platforms=x11,drm
 
+# we don't care about GLes v1
+CONFIGURE_ARGS+=	--disable-gles1
+
 CONFIGURE_ARGS+=	--enable-gles2
 
 # Clover (OpenCL).
@@ -86,8 +89,9 @@ BUILD_DEPENDS+=	libclc>=0.0.r222830:${PORTSDIR}/devel/libclc
 
 # We need the clang port too even if it is not used to compile because
 # Clover needs some of the clang includes to build.
+# XXX Convert this to a check to see if llvm37 supplies a clang37.
 .if ${COMPONENT:Mdri} != "" || ${COMPONENT:Mclover} != "" || ${COMPONENT:Mosmesa} != ""
-BUILD_DEPENDS+=	clang${MESA_LLVM_VER}>=0:${PORTSDIR}/lang/clang${MESA_LLVM_VER}
+#BUILD_DEPENDS+=	clang${MESA_LLVM_VER}>=0:${PORTSDIR}/lang/clang${MESA_LLVM_VER}
 .endif
 
 CONFIGURE_ARGS+=	--enable-opencl \
