--- a/graphics/libGL/Makefile.common
+++ b/graphics/libGL/Makefile.common
@@ -91,7 +91,10 @@ BUILD_DEPENDS+=	libclc>=0.0.r222830:${PORTSDIR}/devel/libclc
 # Clover needs some of the clang includes to build.
 # XXX Convert this to a check to see if llvm37 supplies a clang37.
 .if ${COMPONENT:Mdri} != "" || ${COMPONENT:Mclover} != "" || ${COMPONENT:Mosmesa} != ""
-#BUILD_DEPENDS+=	clang${MESA_LLVM_VER}>=0:${PORTSDIR}/lang/clang${MESA_LLVM_VER}
+. if exists(${LOCALBASE}/bin/llvm-config${MESA_LLVM_VER}) && \
+    !exists(${LOCALBASE}/bin/clang${MESA_LLVM_VER})
+BROKEN=		Your llvm${MESA_LLVM_VER} is not build with clang support, which is required
+. endif
 .endif
 
 CONFIGURE_ARGS+=	--enable-opencl \
