--- a/x11-servers/xorg-server/Makefile
+++ b/x11-servers/xorg-server/Makefile
@@ -14,7 +14,8 @@ COMMENT?=	X.Org X server and related programs
 
 LICENSE=	MIT
 
-LIB_DEPENDS=	libdrm.so:${PORTSDIR}/graphics/libdrm
+LIB_DEPENDS=	libdrm.so:${PORTSDIR}/graphics/libdrm \
+		libepoxy.so:${PORTSDIR}/graphics/libepoxy
 RUN_DEPENDS=	xkeyboard-config>=2.5:${PORTSDIR}/x11/xkeyboard-config \
 		xkbcomp:${PORTSDIR}/x11/xkbcomp
 
@@ -36,7 +37,7 @@ OPTIONS_EXCLUDE_sparc64=	HAL
 
 USES=		gmake libtool perl5 tar:bzip2
 USE_PERL5=	build
-USE_GL=		gl
+USE_GL=		gbm egl gl
 USE_XORG?=	xf86driproto glproto xdmcp x11 xkbfile xxf86misc xxf86vm xaw7 \
 		xmu xt xpm xext randrproto renderproto fixesproto damageproto \
 		dri2proto xcmiscproto xextproto xproto xtrans \
@@ -45,12 +46,12 @@ USE_XORG?=	xf86driproto glproto xdmcp x11 xkbfile xxf86misc xxf86vm xaw7 \
 		videoproto compositeproto trapproto presentproto recordproto \
 		xineramaproto xinerama evieproto xfont fontenc xkbui pixman \
 		pciaccess xshmfence
-# --enable-glamor # needs gbm and epoxy and probably libEGL with drm backend.
 USE_OPENSSL=	yes
 CONFIGURE_ARGS?=--disable-dmx --disable-xvfb --disable-xnest \
 		--without-xmlto --disable-docs --disable-devel-docs \
 		--localstatedir=/var --without-dtrace --disable-xephyr \
-		--enable-record=yes --disable-dri3 --disable-xwayland
+		--enable-record=yes --disable-dri3 --disable-xwayland \
+		--enable-glamor
 INSTALL_TARGET=	install-strip
 
 .if ${SLAVE_PORT} == "no"
