--- a/x11-drivers/xf86-video-intel/Makefile
+++ b/x11-drivers/xf86-video-intel/Makefile
@@ -30,6 +30,7 @@ CPE_VENDOR=	x
 
 CONFIGURE_ENV+=	xorg_cv_cc_flag__Wno_maybe_uninitialized=no
 CONFIGURE_ARGS+=	--enable-sna \
+			--disable-uxa \
 			--disable-dri3
 INSTALL_TARGET=	install-strip
 
